Fix contact link alignment

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ body {
 
 .contacts {
     font-style: normal;
-    text-align: center;
+    text-align: right;
 
     margin-left: 15px;
 }
